Emit bounded pages from Snowflake Arrow page source
SnowflakeArrowPageSource decoded an entire ~160 MB Arrow chunk into a
single Trino page, producing ~90 MB Int128ArrayBlock long[] arrays. Those
oversized blocks then multiply through downstream operators (e.g. the
nested-loop join in the OOM report) and hide the intra-call memory peak
from the engine's between-getOutput() polling.

Decode a chunk once into an Arrow batch that is retained across
getNextSourcePage() calls and consume it in <= 1 MB pages, slicing record
batches in MAX_ROWS_PER_PAGE_SLICE-row steps and stopping at
PageBuilder.isFull(). The BlockWriter interface now writes a position
range so a single record batch can span multiple pages. The next chunk is
still prefetched while the current one is emitted.

(cherry picked from commit 5dcd6126f7d26b4ba708bce9b715d23778aa5536)